--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,5 +1,6 @@
 v0.6.3
 - Updated to PVR API v2.1.0
+- Automatically fill in platform and library name
 
 v0.6.2
 - Debian packaging: fix library install path
