--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,8 @@
+v0.6.8
+- Updated to PVR API v4.1.0
+- Populate IsSeries field on EPG Items
+- Flag Repeating Guide Based TimerType as requiring a Series EPG item
+
 v0.6.7
 - Updated to PVR API v4.0.0
 
@@ -120,7 +125,7 @@ v0.6.0
 - better updating of ‘Recordings’ list for all client platforms
 - can receive gui update triggers from server when checking server status
 - AddTimer notifications are now info/warning rather than errors
-- Add workaround to get XBMC skip/seek to behave nicely for Active and Remuxed recordings 
+- Add workaround to get XBMC skip/seek to behave nicely for Active and Remuxed recordings
 
 0.2.93
 - Implements channel groups
@@ -131,11 +136,11 @@ v0.6.0
 - Supports resume across multiple clients (gotham only)
 - Receives and parses server version
 - Signal status can be scanned (note requires enabling in pvr.wmc addon configuration – gotham clients only
- 
+
 0.2.91
 - Changed some message strings, added message for instant record
 - Gotham only: updated pvr interface to xbmc 1.9.0, to work with newest gotham builds
- 
+
 0.2.9
 - Fixed skin folder name so xml files no longer need to be placed in xbmc install folder (confluence only)
 - Gotham only: fixed custom dialogs
@@ -146,13 +151,13 @@ v0.6.0
 - Client now posts stream open errors to server
 - Increase wait interval for streamfile size check
 - Credential password hidden from log
- 
-0.1.8 
+
+0.1.8
 - Fixed bug that could make client give up on live streams intermittently
 - Stopped freezing/crashing when live-tv tuner is stolen for a recording
 - Now knows whether a stream is actively growing
 - Build number reported to server app
- 
+
 0.1.7
  - made StreamSize server queries happen less often
  - fixed ‘vector’ class connection crashes when socket is not available
