--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,7 @@
+1.1.2
+- added support for buffer timeshift calls
+- added fix for new recordings bug
+
 1.1.1
 - Populate Channel UID field on recordings
 
