--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,11 @@
+2.0.2
+- Set dependency versions automatic during build
+- Removed never used kodi to addon functions
+- Build system fixes
+
+2.0.1
+- Updated Language files from Transifex
+
 2.0.0
 - Initial Kodi v18 version
 
