--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,6 @@
+2.0.3
+- Removed old no more needed version functions
+
 2.0.2
 - Set dependency versions automatic during build
 - Removed never used kodi to addon functions
