--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,5 +1,5 @@
-﻿2.1.2
-- got rid of cstdstring and urlstream, now works with v18
+﻿2.2.0
+- Updated to PVR addon API v5.7.0
 
 2.1.0
 - Updated to PVR addon API v5.3.0
