--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,7 +1,10 @@
- 3.1.0
+3.2.0
+- Recompile for 6.1.0 PVR Addon API compatibility
+
+3.1.0
 - Update to GUI addon API v5.14.0
 
- 3.0.0
+3.0.0
 - Update to PVR addon API v6.0.0
 
 ﻿2.4.4
