--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,7 @@
+3.2.1
+- Update build sytem version
+- Update addon interface header usage
+
 3.2.0
 - Recompile for 6.1.0 PVR Addon API compatibility
 
