--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,6 @@
+3.2.3
+- Update PVR API 6.2.0
+
 3.2.2
 - Replace AppVeyor with Azure for test build (better performance)
 - Add p8-platform to addon depends instead of from kodi
