--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,10 @@
+3.2.4
+- Update Debian build code
+- Update with some minor cleanups
+- Cleanup source copyright to match SPDX
+- Add license name forum url and source url to addon.xml
+- Add GPL2 license file and show GPL2 on README.md
+
 3.2.3
 - Update PVR API 6.2.0
 
@@ -19,7 +26,7 @@
 3.0.0
 - Update to PVR addon API v6.0.0
 
-﻿2.4.4
+2.4.4
 - implemented GetRecordingEdl
 
 2.4.0
@@ -31,7 +38,7 @@
 2.2.6
 - Updated to PVR addon API v5.9.0
 
-﻿2.2.0
+2.2.0
 - Updated to PVR addon API v5.7.0
 
 2.1.0
