--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,11 @@
+5.0.0
+- PVR API 7.0.0
+- Rework addon to support new API interface
+- Code cleanup
+- Change settings.xml to new Kodi format
+- Fix OS and architecture show in addon.xml
+- Remove P8 platform from depends
+
 4.0.0
 - Update PVR API 6.5.1
 - Update Global API 1.2.0
