--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,6 @@
+6.0.0
+- Update PVR API 7.0.2
+
 5.0.2
 - Fix spelling errors identified by Lintian
 
@@ -5,7 +8,7 @@
 - src/utilities.h: add cstdarg include
 
 5.0.0
-- PVR API 7.0.0
+- Update PVR API 7.0.0
 - Rework addon to support new API interface
 - Code cleanup
 - Change settings.xml to new Kodi format
