add addon summary, description and disclaimer to all strings.po's

--- a/pvr.wmc/resources/language/resource.language.am_et/strings.po
+++ b/pvr.wmc/resources/language/resource.language.am_et/strings.po
@@ -17,6 +17,18 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Generator: Weblate 4.7\n"
 
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr ""
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr ""
+
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "የ PVR WMC ደንበኛ"
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr ""
