--- a/pvr.wmc/resources/language/resource.language.cy_gb/strings.po
+++ b/pvr.wmc/resources/language/resource.language.cy_gb/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1) ? 0 : (n==2) ? 1 : (n != 8 && n != 11) ? 2 : 3;\n"
 
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr ""
+
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "Cleiant WMC PVR"
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "Meddalwedd arbrofol yw hon. Defnyddiwch gyda synnwyr cyffredin."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "Enw Cynhaliwr neu IP y Gweinydd"
