--- a/pvr.wmc/resources/language/resource.language.he_il/strings.po
+++ b/pvr.wmc/resources/language/resource.language.he_il/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "לקוח טלוויזיה חיה עבור WMC"
+
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "גרסת @OS@ @ARCHITECTURE@. לקוח טלוויזיה חיה של Windows Media Center. תומך בהזרמת שידורים חיים והקלטות, הצגת לוח שידורים ותזמון הקלטות."
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "זוהי הרחבה נסיונית. השימוש באחריות המשתמש בלבד."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "שם מארח או כתובת IP"
