--- a/pvr.wmc/resources/language/resource.language.ko_kr/strings.po
+++ b/pvr.wmc/resources/language/resource.language.ko_kr/strings.po
@@ -17,6 +17,18 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Weblate 4.7\n"
 
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "PVR WMC 클라이언트"
+
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "@OS@ @ARCHITECTURE@ Edition. Windows Media Center의 녹화 및 EPG 서비스와 연결되는 PVR 클라이언트입니다. Tomba73 과 Hoopsdavis 에게 감사드립니다. DBurckh 에게 특별한 감사의 말을 남깁니다."
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "이것은 실험적인 소프트웨어 입니다. 본인의 책임하에 사용해주세요."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "서버 호스트네임 또는 IP 주소"
