--- a/pvr.wmc/resources/language/resource.language.ca_es/strings.po
+++ b/pvr.wmc/resources/language/resource.language.ca_es/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr ""
+
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "Client PVR WMC"
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "Aquest és programari experimental. Utilitzeu-lo sota la vostra responsabilitat."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "Nom d'amfitrió o IP del servidor"
