--- a/pvr.wmc/resources/language/resource.language.de_de/strings.po
+++ b/pvr.wmc/resources/language/resource.language.de_de/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "PVR WMC-Client"
+
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "@OS@ @ARCHITECTURE@ Edition. Ein PVR-Client zur Verknüpfung mit den Aufnahme- und EPG-Diensten des Windows Media Centers. Dank an Tomba73 und Hoopsdavis. Besonderer Dank an DBurckh."
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "Dies ist eine experimentelle Software. Benutzung auf eigene Gefahr."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "Server-Hostname oder IP"
