--- a/pvr.wmc/resources/language/resource.language.es_mx/strings.po
+++ b/pvr.wmc/resources/language/resource.language.es_mx/strings.po
@@ -17,6 +17,18 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 4.7\n"
 
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "Cliente PVR WMC"
+
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "@OS@ @ARCHITECTURE@ Edition. Un cliente PVR para interactuar con los servicios de Grabación y EPG de Windows Media Center. Gracias a Tomba73 y Hoopsdavis. Gracias especiales a DBurckh."
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "Este es software experimental. Usalo bajo tu propio riesgo."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "Nombre del Servidor o IP"
