--- a/pvr.wmc/resources/language/resource.language.fr_ca/strings.po
+++ b/pvr.wmc/resources/language/resource.language.fr_ca/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "Client de numériscope pour CMW"
+
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "Édition @ARCHITECTURE@ @SE@. Un client de numériscope pour interfacer avec les services d’enregistrement et de GÉP du Centre Multimédia Windows. Merci à Tomba73 et Hoopsdavis. Un grand merci à DBurckh."
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "Ce logiciel est expérimental. Utilisez à vos propres risques."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "Nom d’hôte ou IP du serveur"
