--- a/pvr.wmc/resources/language/resource.language.is_is/strings.po
+++ b/pvr.wmc/resources/language/resource.language.is_is/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "PVR WMC upptökubiðlari"
+
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "@OS@ @ARCHITECTURE@ útgáfa. PVR-biðlari til að tala við Windows Media Center's upptöku og rafræna dagskrárþjónustur. Þakkir fá Tomba73 og Hoopsdavis. Sérstakar þakkir fær DBurckh."
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "Þetta er tilraunahugbúnaður. Notið á eigin ábyrgð."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "Nafn miðlara eða IP-tala"
