--- a/pvr.wmc/resources/language/resource.language.sk_sk/strings.po
+++ b/pvr.wmc/resources/language/resource.language.sk_sk/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "PVR WMC klient"
+
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "Klient pre @OS@ @ARCHITECTURE@. PVR klient pre prístup k Windows Media Center nahrávkam a EPG informáciám. Poďakovanie pre Tomba73 a Hoopsdavis. Špeciálne poďakovanie pre DBurckh."
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "Toto je experimentálny softvér. Používajte ho preto na vlastné riziko."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "Názov serveru alebo IP adresa"
