--- a/pvr.wmc/resources/language/resource.language.sr_rs@latin/strings.po
+++ b/pvr.wmc/resources/language/resource.language.sr_rs@latin/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR WMC Client"
+msgstr "PVR WMC Klijent"
+
+msgctxt "Addon Description"
+msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "@OS@ @ARCHITECTURE@ izdanje. PVR klijent za povezivanje sa Windows Media Center servisima snimanja i EPG. Hvala Tomba73 i Hoopsdavis. Posebno hvala DBurckh."
+
+msgctxt "Addon Disclaimer"
+msgid "This is experimental software. Use at your own risk."
+msgstr "Ovo je eksperimentalni softver. Koristite na svoj rizik."
+
 msgctxt "#30000"
 msgid "Server Hostname or IP"
 msgstr "Hostname Servera ili IP"
