--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,7 @@
+v6.1.3
+- Translations updates from Weblate
+	- af_za, am_et, bg_bg, ca_es, cs_cz, cy_gb, da_dk, de_de, el_gr, en_au, en_gb, en_nz, en_us, es_ar, es_es, es_mx, et_ee, fi_fi, fr_ca, fr_fr, gl_es, he_il, hr_hr, hu_hu, id_id, is_is, it_it, ja_jp, ko_kr, lt_lt, lv_lv, mk_mk, ms_my, mt_mt, nb_no, nl_nl, pl_pl, pt_br, pt_pt, ro_ro, ru_ru, sk_sk, sl_si, sr_rs, sr_rs@latin, sv_se, szl, te_in, tr_tr, uk_ua, zh_cn, zh_tw
+
 v6.1.2
 - Language update from Weblate
 
